# ku_backend

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
all_fixture/: choices.py  spectacular_preorder.py  views_fixture.py
applications/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
blogs/: admin.py  apps.py  constants.py  filters.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  validators.py  views.py
calendars/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
config/: celery.py  settings.py  urls.py
flights/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
guests/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
hotels/: admin.py  apps.py  filters.py  models.py  serializers.py  serializers_type_of_meals.py  tests.py  urls.py  validators.py  views.py
insurances/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
mailings/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
promocodes/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
rooms/: admin.py  apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
tours/: admin.py  filters.py  forms.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
users/: admin.py  authentication.py  extensions.py  managers.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
vzhuhs/: admin.py  apps.py  filters.py  forms.py  models.py  serializers.py  (+2 more)
(+16 files in other folders)
